UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ABS_Add_On_Products__c.field-meta.xml
<CustomField>
    <fullName>ABS_Add_On_Products__c</fullName>
    <inlineHelpText>Business Continuity/Disaster Recovery - BC/DR,
Collaboration - Collab,
Data Center - D.C,
Enterprise Networking - EntNet,
Licensing - Lic,
Security - Sec,
Security - Srvs,
Temperature Sensors - TempSnsr</inlineHelpText>
    <label>ABS Add-On Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BC/DR - Datto</fullName>
            </value>
            <value>
                <fullName>BC/DR - Total360</fullName>
            </value>
            <value>
                <fullName>Collab - Avaya Communications Manager</fullName>
            </value>
            <value>
                <fullName>Collab - Avaya CS1000</fullName>
            </value>
            <value>
                <fullName>Collab - Avaya IP Office</fullName>
            </value>
            <value>
                <fullName>Collab - Cisco BE4K / BE6K / BE7K</fullName>
            </value>
            <value>
                <fullName>Collab - Cisco Cloud Contact Center</fullName>
            </value>
            <value>
                <fullName>Collab - Cisco Contact Center Enterprise</fullName>
            </value>
            <value>
                <fullName>Collab - Cisco Contact Center Express</fullName>
            </value>
            <value>
                <fullName>Collab - Cisco Telepresence Endpoints (All)</fullName>
            </value>
            <value>
                <fullName>Collab - Cisco Webex Calling</fullName>
            </value>
            <value>
                <fullName>Collab - Cisco Webex Endpoints (All)</fullName>
            </value>
            <value>
                <fullName>Collab - Cisco Webex Meetings</fullName>
            </value>
            <value>
                <fullName>Collab - Cisco Webex Teams</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel Access</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel Live Business Gateway</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiCollab</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiCollab Advanced Messaging</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiContact Center Business</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiContact Center Enterprise</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiContact Center Office</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiVoice Audio Web Conference</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiVoice Border Gateway</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiVoice Business (MCD / 3300)</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiVoice Call Recording</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiVoice MX One</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiVoice Office 250</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiVoice Office 400</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiVoice Office App Suite</fullName>
            </value>
            <value>
                <fullName>Collab - Mitel MiVoice Unified Messaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>