UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ABS_Escalation_Approver__c.field-meta.xml
<CustomField>
    <fullName>ABS_Escalation_Approver__c</fullName>
    <label>ABS Escalation Approver</label>
    <length>200</length>
    <type>Text</type>
</CustomField>