UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ABS_Escalation_Reasons__c.field-meta.xml
<CustomField>
    <fullName>ABS_Escalation_Reasons__c</fullName>
    <label>ABS Escalation Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed to set the correct expectation for Interval with Customer</fullName>
            </value>
            <value>
                <fullName>Failed to get the order submitted in a timely manner for processing</fullName>
            </value>
            <value>
                <fullName>Customer is not satisfied with the FOC date given</fullName>
            </value>
            <value>
                <fullName>Current order is past due on the FOC Date (Frontier is the cause)</fullName>
            </value>
            <value>
                <fullName>Current order is past due on the FOC date (Customer is the cause)</fullName>
            </value>
            <value>
                <fullName>TSP Changes/Additions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>