UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ABS_MRC_Amount__c.field-meta.xml
<CustomField>
    <fullName>ABS_MRC_Amount__c</fullName>
    <label>ABS MRC Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>