UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ABS_NRC_Amount__c.field-meta.xml
<CustomField>
    <fullName>ABS_NRC_Amount__c</fullName>
    <label>ABS NRC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>