UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ABS_Order_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>ABS_Order_Request_Type__c</fullName>
    <label>ABS Order Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disconnect</fullName>
            </value>
            <value>
                <fullName>Maintenance: Auto-Renew</fullName>
            </value>
            <value>
                <fullName>Maintenance: New</fullName>
            </value>
            <value>
                <fullName>Move</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Records Only</fullName>
            </value>
            <value>
                <fullName>Transfer of Ownership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>