UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ABS_Products__c.field-meta.xml
<CustomField>
    <fullName>ABS_Products__c</fullName>
    <label>ABS Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Continuity/Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Data Center Licensing</fullName>
            </value>
            <value>
                <fullName>Data Center Servers</fullName>
            </value>
            <value>
                <fullName>Data Center Storage</fullName>
            </value>
            <value>
                <fullName>Data Center Switching</fullName>
            </value>
            <value>
                <fullName>Emergency Notification</fullName>
            </value>
            <value>
                <fullName>Enterprise Networking</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Temperature Sensors</fullName>
            </value>
            <value>
                <fullName>E911</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>