UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ABS_Project_Specialist__c.field-meta.xml
<CustomField>
    <fullName>ABS_Project_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User for ABS Sales Engineers only to assign themselves to an ABS order</description>
    <label>ABS Project Specialist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.profileName__c</field>
            <operation>equals</operation>
            <value>#ABS Solution Engineer Supervisor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders7</relationshipName>
    <type>Lookup</type>
</CustomField>