UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/AccountTeamMember__c.field-meta.xml
<CustomField>
    <fullName>AccountTeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSA/SAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders8</relationshipName>
    <type>Lookup</type>
</CustomField>