UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Actual_Approver__c.field-meta.xml
<CustomField>
    <fullName>Actual_Approver__c</fullName>
    <label>Actual Approver</label>
    <length>20</length>
    <type>Text</type>
</CustomField>