UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Add_On_Products__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Products__c</fullName>
    <description>Field is used to add other available services to current Product Type (Family) and Product selected via the orders</description>
    <inlineHelpText>Items will display based on availability of other Products that can be added to the Product selected.</inlineHelpText>
    <label>Add-On Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BOT</fullName>
            </value>
            <value>
                <fullName>Broadband</fullName>
            </value>
            <value>
                <fullName>Centrex/CustoPak/CentraLink/Versaline</fullName>
            </value>
            <value>
                <fullName>Cloud Managed Solutions</fullName>
            </value>
            <value>
                <fullName>Connect Cloud</fullName>
            </value>
            <value>
                <fullName>Ethernet - BYOA</fullName>
            </value>
            <value>
                <fullName>Fiber Optics</fullName>
            </value>
            <value>
                <fullName>Hunting</fullName>
            </value>
            <value>
                <fullName>IP Connect</fullName>
            </value>
            <value>
                <fullName>IPVPN</fullName>
            </value>
            <value>
                <fullName>Managed Cellular Failover</fullName>
            </value>
            <value>
                <fullName>Managed Firewall</fullName>
            </value>
            <value>
                <fullName>Managed Security</fullName>
                <isActive>false</isActive>
                <label>Managed Security</label>
            </value>
            <value>
                <fullName>Managed Security - Advanced</fullName>
            </value>
            <value>
                <fullName>Managed Security - Standard</fullName>
            </value>
            <value>
                <fullName>Managed Wi-Fi</fullName>
                <label>Managed Wi-Fi - Indoor</label>
            </value>
            <value>
                <fullName>Managed Wi-Fi - Outdoor</fullName>
            </value>
            <value>
                <fullName>OneVoice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other (3 way calling, Call Forwarding, Frontier Texting, etc.)</fullName>
            </value>
            <value>
                <fullName>POTS</fullName>
            </value>
            <value>
                <fullName>Remote Call Forward</fullName>
            </value>
            <value>
                <fullName>SDWAN - BYOA</fullName>
            </value>
            <value>
                <fullName>SIP Trunking</fullName>
            </value>
            <value>
                <fullName>Smart Voice</fullName>
            </value>
            <value>
                <fullName>Toll Free</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>