UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Adding_a_new_Leg_to_Existing_Circuit__c.field-meta.xml
<CustomField>
    <fullName>Adding_a_new_Leg_to_Existing_Circuit__c</fullName>
    <label>Adding a new Leg to Existing Circuit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>