UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Additional_UCF_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_UCF_Information__c</fullName>
    <label>Additional UCF Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>