UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Address_for_Final_Bill__c.field-meta.xml
<CustomField>
    <fullName>Address_for_Final_Bill__c</fullName>
    <label>Address for Final Bill?</label>
    <type>TextArea</type>
</CustomField>