UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Agent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>