UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <label>Agent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master Agent</fullName>
            </value>
            <value>
                <fullName>Sub Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>