UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/AreaCode__c.field-meta.xml
<CustomField>
    <fullName>AreaCode__c</fullName>
    <formula>Opportunity.AreaCode__c</formula>
    <label>AreaCode</label>
    <type>Text</type>
</CustomField>