UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Assigned_voip_translator__c.field-meta.xml
<CustomField>
    <fullName>Assigned_voip_translator__c</fullName>
    <label>Assigned VOIP Translator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAUL CLARK</fullName>
            </value>
            <value>
                <fullName>WILLIAM RUSS II</fullName>
            </value>
            <value>
                <fullName>PETER GUTSCHE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>