UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Associated_ECR__c.field-meta.xml
<CustomField>
    <fullName>Associated_ECR__c</fullName>
    <label>Associated ECR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>