UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Associated_EWO__c.field-meta.xml
<CustomField>
    <fullName>Associated_EWO__c</fullName>
    <label>Associated EWO#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>