UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Associated_Project__c.field-meta.xml
<CustomField>
    <fullName>Associated_Project__c</fullName>
    <label>Associated Project#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>