UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Authorization_Name__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Name__c</fullName>
    <label>Cancellation Authorization Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>