UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/BDT__c.field-meta.xml
<CustomField>
    <fullName>BDT__c</fullName>
    <label>BDT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>