UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Billing_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email_Address__c</fullName>
    <label>Billing Contact Email Address</label>
    <type>Email</type>
</CustomField>