UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <label>Billing Contact Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>