UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Billing_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Number__c</fullName>
    <label>Billing Contact Number</label>
    <type>Phone</type>
</CustomField>