UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Billing_System__c.field-meta.xml
<CustomField>
    <fullName>Billing_System__c</fullName>
    <label>Billing System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BEST</fullName>
            </value>
            <value>
                <fullName>CABS</fullName>
            </value>
            <value>
                <fullName>DPI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TigerPaw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>