UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Broadband_COE__c.field-meta.xml
<CustomField>
    <fullName>Broadband_COE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Network COE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>