UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Broadband_COE_Stage__c.field-meta.xml
<CustomField>
    <fullName>Broadband_COE_Stage__c</fullName>
    <label>Network COE Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UCaaS_Cutover_Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Process Order</fullName>
            </value>
            <value>
                <fullName>Simply BB Completed</fullName>
            </value>
            <value>
                <fullName>Review Order</fullName>
            </value>
            <value>
                <fullName>DPI Orders in Progress</fullName>
            </value>
            <value>
                <fullName>DPI Order Completed</fullName>
            </value>
            <value>
                <fullName>Pending First Bill Review</fullName>
            </value>
            <value>
                <fullName>Bill First Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>