UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Broadband_Queue_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Broadband_Queue_Assignment__c</fullName>
    <label>Broadband Queue Assignment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>