UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CA_Teleconnect__c.field-meta.xml
<CustomField>
    <fullName>CA_Teleconnect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA Teleconnect</label>
    <type>Checkbox</type>
</CustomField>