UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CABS_Tarriff__c.field-meta.xml
<CustomField>
    <fullName>CABS_Tarriff__c</fullName>
    <label>CABS Tarriff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State - PIU 0</fullName>
            </value>
            <value>
                <fullName>Federal - PIU 100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>