UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/California_Teleconnect__c.field-meta.xml
<CustomField>
    <fullName>California_Teleconnect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>California Teleconnect</label>
    <type>Checkbox</type>
</CustomField>