UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Camarillo_POD_2__c.field-meta.xml
<CustomField>
    <fullName>Camarillo_POD_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Camarillo POD 2</label>
    <type>Checkbox</type>
</CustomField>