UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition of Customer</fullName>
            </value>
            <value>
                <fullName>Bad Experience</fullName>
            </value>
            <value>
                <fullName>Change in Needs</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Duplicate Order</fullName>
            </value>
            <value>
                <fullName>Exceeded Implementation Time Window</fullName>
            </value>
            <value>
                <fullName>Loss of Key Advocate</fullName>
            </value>
            <value>
                <fullName>New Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Doesn&apos;t Fit Needs</fullName>
            </value>
            <value>
                <fullName>Product Solution changed (going with a different Product)</fullName>
            </value>
            <value>
                <fullName>STATS Order not SalesForce Order - Resubmitting via STATS</fullName>
            </value>
            <value>
                <fullName>Value Proposition Misunderstood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>