UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Cancel_Requested__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Requested</label>
    <type>Checkbox</type>
</CustomField>