UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation__c</fullName>
    <label>Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Requested Cancellation</fullName>
            </value>
            <value>
                <fullName>Frontier Declines Construction to Customer</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
            <value>
                <fullName>Frontier Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>