UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Eagan</fullName>
            </value>
            <value>
                <fullName>American Telesis</fullName>
            </value>
            <value>
                <fullName>Ameritech</fullName>
            </value>
            <value>
                <fullName>Amery Telecom</fullName>
            </value>
            <value>
                <fullName>Amherst Telephone Co.</fullName>
            </value>
            <value>
                <fullName>Armstrong ( only if requested)</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>B2Telecom</fullName>
            </value>
            <value>
                <fullName>Balsam West FiberNet</fullName>
            </value>
            <value>
                <fullName>Bandwidth</fullName>
            </value>
            <value>
                <fullName>Bayland Telephone, LLC</fullName>
            </value>
            <value>
                <fullName>Ben Lomand</fullName>
            </value>
            <value>
                <fullName>BevComm</fullName>
            </value>
            <value>
                <fullName>Bloomer Telephone Co.</fullName>
            </value>
            <value>
                <fullName>Bruce Telephone Co., Inc.</fullName>
            </value>
            <value>
                <fullName>Bulloch Telephone</fullName>
            </value>
            <value>
                <fullName>Canby Tel</fullName>
            </value>
            <value>
                <fullName>Cascade Networks</fullName>
            </value>
            <value>
                <fullName>CBC (California Broadband Coop Inc)</fullName>
            </value>
            <value>
                <fullName>CenturyLink</fullName>
            </value>
            <value>
                <fullName>Cequel dba Suddenlink</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>CHRISTENSEN COMM</fullName>
            </value>
            <value>
                <fullName>Cincinnati Bell</fullName>
            </value>
            <value>
                <fullName>Clear Lake Telephone Co., Inc.</fullName>
            </value>
            <value>
                <fullName>Clearwave</fullName>
            </value>
            <value>
                <fullName>Comlink</fullName>
            </value>
            <value>
                <fullName>Consolidated Communications</fullName>
            </value>
            <value>
                <fullName>Coon Valley Farmers Tel. Co., Inc.</fullName>
            </value>
            <value>
                <fullName>Dukenet-now Time Warner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>