UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CCNA__c.field-meta.xml
<CustomField>
    <fullName>CCNA__c</fullName>
    <label>CCNA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>