UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Charleston_POD_3__c.field-meta.xml
<CustomField>
    <fullName>Charleston_POD_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charleston POD 3</label>
    <type>Checkbox</type>
</CustomField>