UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Circuit_ID_to_be_Disconnected__c.field-meta.xml
<CustomField>
    <fullName>Circuit_ID_to_be_Disconnected__c</fullName>
    <label>Circuit ID to be Disconnected</label>
    <length>50</length>
    <type>Text</type>
</CustomField>