UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Circuit_Product__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Product__c</fullName>
    <label>Circuit Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 - Wire</fullName>
            </value>
            <value>
                <fullName>4 - Wire</fullName>
            </value>
            <value>
                <fullName>BOT</fullName>
            </value>
            <value>
                <fullName>BRI</fullName>
            </value>
            <value>
                <fullName>Circuit Other (SONET, Frame Relay, etc.)</fullName>
            </value>
            <value>
                <fullName>E911/CAMA Trunks/SS7</fullName>
            </value>
            <value>
                <fullName>FOTS</fullName>
            </value>
            <value>
                <fullName>Off-Premise Extension</fullName>
            </value>
            <value>
                <fullName>PRI</fullName>
            </value>
            <value>
                <fullName>Private Line DS3</fullName>
            </value>
            <value>
                <fullName>Private Line T1 / DS1/Smart-T</fullName>
            </value>
            <value>
                <fullName>BOTS</fullName>
                <isActive>false</isActive>
                <label>BOTS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>