UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Circuit_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Service_Type__c</fullName>
    <label>Circuit Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Switched</fullName>
            </value>
            <value>
                <fullName>Dedicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>