UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Circuit_WTN_to_be_Disconnected__c.field-meta.xml
<CustomField>
    <fullName>Circuit_WTN_to_be_Disconnected__c</fullName>
    <inlineHelpText>(WTN) Working Telephone Number</inlineHelpText>
    <label>Circuit (WTN) to be Disconnected</label>
    <type>Phone</type>
</CustomField>