UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Circular_Linear_Hunt_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Circular_Linear_Hunt_Sequence__c</fullName>
    <label>Circular/Linear Hunt Sequence?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Circular</fullName>
            </value>
            <value>
                <fullName>Linear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>