UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Client_Services_Rep__c.field-meta.xml
<CustomField>
    <fullName>Client_Services_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Services Rep</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Customer Service Analyst</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>ordersClientServicesRep</relationshipName>
    <type>Lookup</type>
</CustomField>